force-app/main/default/objects/Opportunity/fields/Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Add_Ons__c</fullName>
    <label>Add Ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 Year FriendMedia</fullName>
                <isActive>false</isActive>
                <label>1 Year FriendMedia</label>
            </value>
            <value>
                <fullName>Additional 1 year Warranty</fullName>
            </value>
            <value>
                <fullName>Additional 2 year warranty</fullName>
            </value>
            <value>
                <fullName>Additional 3 year warranty</fullName>
            </value>
            <value>
                <fullName>Additional Free Trainings</fullName>
            </value>
            <value>
                <fullName>Additional Social Media Ad Dollars</fullName>
            </value>
            <value>
                <fullName>Empire Medical Discount</fullName>
            </value>
            <value>
                <fullName>Exfluential VIP Program</fullName>
                <isActive>false</isActive>
                <label>Exfluential VIP Program</label>
            </value>
            <value>
                <fullName>Extra Filters</fullName>
            </value>
            <value>
                <fullName>Extra Patient Goggles</fullName>
            </value>
            <value>
                <fullName>Extra Practitioner Goggles</fullName>
            </value>
            <value>
                <fullName>Marketing Dollars</fullName>
            </value>
            <value>
                <fullName>New Mark Media Package</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>One Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance Per Year Warranty</fullName>
            </value>
            <value>
                <fullName>Rebate Check</fullName>
            </value>
            <value>
                <fullName>Referral Fee Per Device Placed</fullName>
            </value>
            <value>
                <fullName>Social Media Package - 3 months</fullName>
                <isActive>false</isActive>
                <label>Social Media Package - 3 months</label>
            </value>
            <value>
                <fullName>Social Media Package - 6 months</fullName>
                <isActive>false</isActive>
                <label>Social Media Package - 6 months</label>
            </value>
            <value>
                <fullName>VIP Loaner Program</fullName>
            </value>
            <value>
                <fullName>VIP Warranty Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>