force-app/main/default/objects/Opportunity/fields/AML_Agreement__c.field-meta.xml
<CustomField>
    <fullName>AML_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML Agreement</label>
    <type>Checkbox</type>
</CustomField>