force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__AvaTax_Doc_Status__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__AvaTax_Doc_Status__c</fullName>
    <description>Temporary = Not Saved to Avalara AvaTax
Saved = Saved but not Posted/Committed to Avalara AvaTax
Committed = Saved and Committed to Avalara AvaTax</description>
    <inlineHelpText>Temporary = Not Saved to Avalara AvaTax
Saved = Saved but not Posted/Committed to Avalara AvaTax
Committed = Saved and Committed to Avalara AvaTax</inlineHelpText>
    <label>AvaTax Doc Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>