force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__AvaTax_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__AvaTax_Message__c</fullName>
    <description>Displays AvaTax responses or messages.</description>
    <inlineHelpText>Displays AvaTax responses or messages.</inlineHelpText>
    <label>AvaTax Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>