force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Cross_Border_Summary_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Cross_Border_Summary_Message__c</fullName>
    <inlineHelpText>The resulting tax calculation response message indicating de minimus, source rules, and etc.</inlineHelpText>
    <label>Cross Border Summary Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>