force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Origin_City__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Origin_City__c</fullName>
    <description>Enter the city of your opportunity.</description>
    <inlineHelpText>Enter the city of your opportunity.</inlineHelpText>
    <label>Origin City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>