force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Origin_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Origin_Postal_Code__c</fullName>
    <description>Enter the zip/postal code of your opportunity.</description>
    <inlineHelpText>Enter the zip/postal code of your opportunity.</inlineHelpText>
    <label>Origin Zip/Postal Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>