force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bought Used Machine</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Doesnt Meet Needs</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Retiring</fullName>
            </value>
            <value>
                <fullName>Sold Business</fullName>
            </value>
            <value>
                <fullName>Stopped all Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>