force-app/main/default/objects/Opportunity/fields/Code_Entry__c.field-meta.xml
<CustomField>
    <fullName>Code_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Regarding AML Financing Program</description>
    <label>Code Entry</label>
    <type>Checkbox</type>
</CustomField>