force-app/main/default/objects/Opportunity/fields/Contact_Lifecycle_Stage_Updated_TS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lifecycle_Stage_Updated_TS__c</fullName>
    <label>Contact Lifecycle Stage Updated TS</label>
    <type>DateTime</type>
</CustomField>