force-app/main/default/objects/Opportunity/fields/Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Deliverables__c</fullName>
    <label>Deliverables</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speaking Engagement for Aerolase</fullName>
            </value>
            <value>
                <fullName>Prospect Introduction</fullName>
            </value>
            <value>
                <fullName>Purchase Secondary Device at Discounted Rate</fullName>
            </value>
            <value>
                <fullName>KOL Agreement</fullName>
            </value>
            <value>
                <fullName>Before &amp; Afters</fullName>
            </value>
            <value>
                <fullName>Video testimonial for Aerolase</fullName>
            </value>
            <value>
                <fullName>Clinical Reference For Calls</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>