force-app/main/default/objects/Opportunity/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type for Marketing Materials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Era (refurfished)</fullName>
            </value>
            <value>
                <fullName>Era (standard)</fullName>
            </value>
            <value>
                <fullName>Era Elite</fullName>
            </value>
            <value>
                <fullName>Era Elite (refurbished)</fullName>
            </value>
            <value>
                <fullName>Exci308</fullName>
            </value>
            <value>
                <fullName>Neo (refurbished)</fullName>
            </value>
            <value>
                <fullName>Neo (standard)</fullName>
            </value>
            <value>
                <fullName>NeoDerm</fullName>
            </value>
            <value>
                <fullName>NeoDerm (Bundle with Era Elite)</fullName>
            </value>
            <value>
                <fullName>NeoDerm (Bundle with Exci308)</fullName>
            </value>
            <value>
                <fullName>Neo Elite</fullName>
            </value>
            <value>
                <fullName>Neo Elite, Era Elite, Exci308</fullName>
            </value>
            <value>
                <fullName>Neo Elite (refurbished)</fullName>
            </value>
            <value>
                <fullName>Neo Elite &amp; Exci308 Bundle</fullName>
            </value>
            <value>
                <fullName>Neo Elite and Era Elite</fullName>
                <label>Neo Elite and Era Elite (Reverse)</label>
            </value>
            <value>
                <fullName>Neo Standard and Era Standard</fullName>
            </value>
            <value>
                <fullName>Neo V</fullName>
            </value>
            <value>
                <fullName>Neo (Demo)</fullName>
            </value>
            <value>
                <fullName>Era (Demo)</fullName>
            </value>
            <value>
                <fullName>Exci308 (Demo)</fullName>
            </value>
            <value>
                <fullName>Era &amp; Exci Bundle</fullName>
            </value>
            <value>
                <fullName>Neo Derm &amp; Era Elite Bundle</fullName>
            </value>
            <value>
                <fullName>Era Focus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>