force-app/main/default/objects/Opportunity/fields/Financing_Program__c.field-meta.xml
<CustomField>
    <fullName>Financing_Program__c</fullName>
    <label>Financing Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash/Self Financed</fullName>
            </value>
            <value>
                <fullName>3rdParty</fullName>
                <label>3rd Party</label>
            </value>
            <value>
                <fullName>Partnership/No Interest (AML)</fullName>
                <label>AML/Internal Financing</label>
            </value>
            <value>
                <fullName>Subscription/Rental</fullName>
                <label>Subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>