force-app/main/default/objects/Opportunity/fields/FromLead__c.field-meta.xml
<CustomField>
    <fullName>FromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromLead</label>
    <type>Checkbox</type>
</CustomField>