force-app/main/default/objects/Opportunity/fields/Helpful_Info_for_Customer_Success__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Info_for_Customer_Success__c</fullName>
    <description>Please include any helpful insight for the customer success team onboarding. For example, what is the practice looking to treat, what is their current main demographic, any goals they have mentioned during the sales process, etc.</description>
    <inlineHelpText>Please include any helpful insight for the customer success team onboarding. For example, what is the practice looking to treat, what is their current main demographic, any goals they have mentioned during the sales process, etc.</inlineHelpText>
    <label>Helpful Info for Customer Success</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>