force-app/main/default/objects/Opportunity/fields/Insurance_Documents__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Insurance (COI)</label>
    <type>Checkbox</type>
</CustomField>