force-app/main/default/objects/Opportunity/fields/Laser_Serial_3rd_Device__c.field-meta.xml
<CustomField>
    <fullName>Laser_Serial_3rd_Device__c</fullName>
    <label>Laser Serial # (3rd Device)</label>
    <length>125</length>
    <type>Text</type>
</CustomField>