force-app/main/default/objects/Opportunity/fields/Loss_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Notes__c</fullName>
    <label>Loss Reason Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>