force-app/main/default/objects/Opportunity/fields/Onboarding_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Onboarding Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Onboarding Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>