force-app/main/default/objects/Opportunity/fields/Pipeline_Commission__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Commission__c</fullName>
    <label>Pipeline Commission %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>