force-app/main/default/objects/Opportunity/fields/Pipeline_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Created_Date__c</fullName>
    <label>Pipeline Created Date</label>
    <type>Date</type>
</CustomField>