force-app/main/default/objects/Opportunity/fields/Pipeline_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Notes__c</fullName>
    <label>Pipeline Notes</label>
    <type>TextArea</type>
</CustomField>