force-app/main/default/objects/Opportunity/fields/Pipeline_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Owner__c</fullName>
    <label>Pipeline Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>