force-app/main/default/objects/Opportunity/fields/Pipeline_People__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_People__c</fullName>
    <label>Pipeline People</label>
    <length>120</length>
    <type>Text</type>
</CustomField>