force-app/main/default/objects/Opportunity/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <label>Pipeline Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>