force-app/main/default/objects/Opportunity/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO</label>
    <type>Checkbox</type>
</CustomField>