force-app/main/default/objects/Opportunity/fields/PrimaryOppOwnerFilter__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOppOwnerFilter__c</fullName>
    <formula>IF( $User.Id = OwnerId, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPrimaryOwner</label>
    <type>Checkbox</type>
</CustomField>