force-app/main/default/objects/Opportunity/fields/Schedule_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Training_Date__c</fullName>
    <label>Schedule Training Date</label>
    <type>Date</type>
</CustomField>