force-app/main/default/objects/Opportunity/fields/Second_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Second_Lead_Source__c</fullName>
    <label>Second Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Second_Lead_Source</valueSetName>
    </valueSet>
</CustomField>