force-app/main/default/objects/Opportunity/fields/Stage_Before_Closed__c.field-meta.xml
<CustomField>
    <fullName>Stage_Before_Closed__c</fullName>
    <label>Stage Before Closed</label>
    <length>120</length>
    <type>Text</type>
</CustomField>