force-app/main/default/objects/Opportunity/fields/Stage_Set_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Stage_Set_at_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Set at Creation</label>
    <type>Checkbox</type>
</CustomField>