force-app/main/default/objects/Opportunity/fields/W_9__c.field-meta.xml
<CustomField>
    <fullName>W_9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W-9</label>
    <type>Checkbox</type>
</CustomField>