force-app/main/default/objects/Opportunity/fields/Warranty_Expiration_3rd_Device__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration_3rd_Device__c</fullName>
    <label>Warranty Expiration (3rd Device)</label>
    <type>Date</type>
</CustomField>