force-app/main/default/objects/Opportunity/validationRules/Add_on_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_on_is_Required</fullName>
    <active>false</active>
    <description>Add-ons is required</description>
    <errorConditionFormula>AND(
IsBlank( Add_Ons__c ),
ISCHANGED(StageName),
OR(
ISPICKVAL(StageName, &apos;Contract Signed&apos;),
ISPICKVAL(StageName, &apos;Deal Funded&apos;),
ISPICKVAL(StageName, &apos;Closed Won&apos;)
)
)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Add-ons is required. If there are no add-ons, select none.</errorMessage>
</ValidationRule>