force-app/main/default/objects/Opportunity/validationRules/Device_Type_for_Marketing_Materials.validationRule-meta.xml
<ValidationRule>
    <fullName>Device_Type_for_Marketing_Materials</fullName>
    <active>true</active>
    <description>Device Type for Marketing Materials is required</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Contract Signed&apos;), ISBLANK(TEXT( Device_Type__c )))</errorConditionFormula>
    <errorMessage>Please add Device Type so Customer Success can ship out marketing materials</errorMessage>
</ValidationRule>