force-app/main/default/objects/Opportunity/validationRules/Financing_Program_Must_Be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Financing_Program_Must_Be_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Contract Signed&apos;), ISBLANK(TEXT(  Financing_Program__c )))</errorConditionFormula>
    <errorMessage>Financing Type Needs to be selected from drop-down list</errorMessage>
</ValidationRule>