force-app/main/default/objects/Opportunity/validationRules/Only_Admins_Can_Change_to_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admins_Can_Change_to_Closed_Won</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT(CONTAINS($User.ProfileId,&quot;00e8b000001QPmG&quot;)) , 
ISCHANGED(StageName), 
(ISPICKVAL(StageName,&quot;Closed Won&quot;)
))</errorConditionFormula>
    <errorMessage>Only System Admins can move a deal to Closed Won</errorMessage>
</ValidationRule>