force-app/main/default/objects/Opportunity/validationRules/Only_Admins_Can_Change_to_Deal_Funded.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admins_Can_Change_to_Deal_Funded</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
$Profile.Name != &apos;System Administrator&apos;, 
ISCHANGED(StageName), 
(ISPICKVAL(StageName,&quot;Deal Funded&quot;)
))</errorConditionFormula>
    <errorMessage>Only System Admins can move a deal to Deal Funded</errorMessage>
</ValidationRule>