force-app/main/default/objects/Opportunity/validationRules/PreventOppCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventOppCreation</fullName>
    <active>false</active>
    <description>Any Opportunities that are not from Lead conversion are required to have an Account and a primary Contact.</description>
    <errorConditionFormula>AND(
ISNEW(),
FromLead__c = False,
OR(
ISBLANK(AccountId),
ISBLANK(Primary_Contact__c))
)</errorConditionFormula>
    <errorMessage>Account and Contact is required to create an Opportunity</errorMessage>
</ValidationRule>