force-app/main/default/objects/Opportunity/validationRules/Training_Contact_Must_Be_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Contact_Must_Be_Filled</fullName>
    <active>true</active>
    <description>Training contact field must be filled in order to mark contract signed complete</description>
    <errorConditionFormula>AND(
IsBlank( Training_Contact__c ),
ISCHANGED(StageName),
OR(
ISPICKVAL(StageName, &apos;Contract Signed&apos;),
ISPICKVAL(StageName, &apos;Deal Funded&apos;),
ISPICKVAL(StageName, &apos;Closed Won&apos;)
)
)</errorConditionFormula>
    <errorMessage>Please Add Training Contact</errorMessage>
</ValidationRule>