force-app/main/default/objects/Opportunity/listViews/All_Open_Opportunities_Public.listView-meta.xml
<ListView>
    <fullName>All_Open_Opportunities_Public</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>State__c</columns>
    <columns>Device_Type__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Opportunities</label>
</ListView>