force-app/main/default/objects/Opportunity/listViews/Closed_Won_Opportunities_NM.listView-meta.xml
<ListView>
    <fullName>Closed_Won_Opportunities_NM</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Device_Type__c</columns>
    <columns>State__c</columns>
    <columns>AML_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>NM,New Mexico</value>
    </filters>
    <label>Closed Won Opportunities , NM</label>
</ListView>