force-app/main/default/objects/Opportunity/listViews/Funded_Opportunities_Public.listView-meta.xml
<ListView>
    <fullName>Funded_Opportunities_Public</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Device_Type__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Deal Funded</value>
    </filters>
    <label>Funded Opportunities</label>
</ListView>